# djv

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  release-plz.toml  service.datadog.yaml
.github/workflows/: ci.yml  datadog-sast.yml  datadog-sca.yml  datadog-secrets.yml  release-plz.yml
.sqlx/: query-141edb963877557dd221dda6caa55291f409b90b15cde7b71d8c927e4a5a03ee.json  query-31321c3b3ec594c48fe75980f7a16a692df76d0919568458a5312fdf3679523f.json  query-31df4bd590d53cf89307ae3541bd88e6f5d1ef116685d39329d96aac01f107df.json  query-31ed651d4b32922179d01d4cf94b7bba1f039765205d019a9fdc0014b6a9fbd5.json  query-3a09e0c93cc91a73f6f6f73caa582400fa66165cb61fe5d4965f6729e7bf1470.json  query-451ba1b993251d54e0d1585e2b3bc93dcb4c293ff919bb0f1d70b6a391fa1fc8.json  query-5358484bb6df1515586278cab91513d0e110389821f8e5599cca93f65b145bea.json  query-58555a5d6145de831bd24d1f01e186a6c627cf3f9a60121a6541806effb43327.json  query-67f14ac215ff518191dadc9d6fcb293996e2f2c78b7ba918aaddba03eb44d993.json  query-754e50e2e96917bf01dbcba5d389a48ba6b4c95bba245d85b4bbb9df7d762c36.json  query-7a8008aa9ef44c507d4bcc023f622b0a78f37351363c7d22a18f70316ec47670.json  query-9335240ac186baf56c8690a82dfd36465ad2475f757a1147cc89402a1853a7a8.json  query-b8ff6a73eefde303f7087a78b5a689a7e27367f020fa5195eaea532b112cb323.json  query-baaee548df5d067653d62bbf36267974743800720e19ac299b10c97736042bf6.json  query-ccd50a7c6593f93c63fdb731d44d05db48134e4ed32a96981b065e1804a65269.json  query-d6a95b81739376780b37df36680afdafc7ae697a3993d5ddd51a5565a58918f4.json  query-e610fba07f8760d1f77b3ffb10bfcd490b772f897d77499150f95976eae0c97b.json  query-f1cf103b4f36540c489ddf10505fecdf535b4c2e517482771f1f925793421116.json
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: empty-states.spec.ts  filtering.spec.ts  homepage.spec.ts  navigation.spec.ts  smoke.spec.ts  sorting.spec.ts
migrations/: 20241224000001_create_repositories.sql  20241224000002_create_crates.sql  20241224000003_create_npm_packages.sql  20241224000004_create_contributions.sql  20241224000005_create_projects_view.sql  20241225000001_add_rich_metadata.sql  20241226000001_add_performance_indexes.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  proxy_headers.rs  state.rs
src/components/: contributions_list.rs  filter_bar.rs  header.rs  language_icon.rs  mod.rs  project_card.rs  project_grid.rs  projects_placeholder.rs  theme_toggle.rs
src/db/: mod.rs  models.rs  queries.rs  tests.rs
src/sync/: contributions.rs  mod.rs
src/sync/forges/: github.rs  gitlab.rs  mod.rs
src/sync/registries/: crates_io.rs  mod.rs  npm.rs
style/: _design-system.scss  main.scss
